# crate-run

./: .gitignore  Cargo.toml  README.md  pom.xml
.github/workflows/: ci.yml
src/: main.rs
src/cli/: commands.rs  mod.rs
src/core/: id.rs  mod.rs  model.rs  state.rs
src/platform/linux/: cgroups.rs  mod.rs  mounts.rs  namespaces.rs  process.rs
src/util/: fs.rs
tests/: integration_smoke.rs  unit_config.rs  unit_id.rs  unit_state.rs
