[package]
name = "craterun"
version = "0.1.0"
edition = "2021"
description = "A minimal Linux container runtime (Docker-lite) for educational purposes"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.29", features = [
    "sched",
    "mount",
    "signal",
    "fs",
    "process",
    "hostname",
    "user",
] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
